--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "prepare": "npm run build",
     "build": "tsc",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -40,12 +43,15 @@
   "homepage": "https://github.com/products-db/sdk-node#readme",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.4",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   }
