--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@products-db/sdk-node",
+  "name": "products-db",
   "version": "1.0.0",
   "description": "Official Node.js SDK for ProductsDB: Effortlessly integrate product data into your applications with powerful features and seamless authentication.",
   "main": "dist/index.js",
